crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__query_index_values__query_index_values_duration_unknown_segment_data.snap
---
source: crates/store/re_redap_tests/src/tests/query_index_values.rs
expression: filtered_results.format_snapshot(false)
---
┌────────────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┬──────────┬──────────────────┐
│ /my/entity:example.MyPoints:colors ┆ /my/entity:example.MyPoints:labels ┆ /my/entity:example.MyPoints:points ┆ duration ┆ rerun_segment_id │
╞════════════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╪══════════╪══════════════════╡
└────────────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┴──────────┴──────────────────┘
